# M2_A_Maze_ing

./: .gitignore  ECHALE_UN_OJO_CRISTIAN.txt  HOJA_DE_RUTA.md  Makefile  README.md  REPORTE_ENTREGA.md  TREASURE_GUIDE.md  a_maze_ing.py  config.py  config.txt  config_maze.txt  diff.txt  encoder.py  exit  maze  maze_generator.py  mazegen-0.1.0-py3-none-any.whl  mazegen-1.0.0-py3-none-any.whl  parser.py  pyproject.toml  resources.txt  test_package.py
audit/: .gitignore  README.md  run.ps1  run.sh  run_audit.py  setup.ps1  setup.sh
audit/configs/: bad_entry.txt  bad_perfect.txt  missing_width.txt  no_equals.txt  same_entry_exit.txt  seed.txt  seed_1.txt  seed_10.txt  seed_2.txt  seed_3.txt  seed_4.txt  seed_5.txt  seed_6.txt  seed_7.txt  seed_8.txt  seed_9.txt  valid.txt
audit/reports/: Fase0_bootstrap.md  Fase1_lint.md  Fase2_parser.md  Fase3_coords.md  Fase4_generator.md  Fase5_solver.md  Fase6_output.md  Fase7_cli.md  Fase8_packaging.md  Fase9_consolidate.md
mazegen/: __init__.py  generator.py  solver.py
tests/: conftest.py  test_a_maze_ing.py  test_encoder.py  test_generator.py  test_integration.py  test_parser.py  test_solver.py
