[project]
name = "mazegen"
version = "0.1.0"
description = "Maze generator"
authors = [
    {name = "czuluaga, alejandr"}
]
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8",
    "mypy",
    "build",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
