[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "Maze generator"
authors = ["czuluaga, alejandr"]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
flake8 = "*"
mypy = "*"
build = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
